layout shift fix

--- a/blocks/text-with-media/text-with-media.css
+++ b/blocks/text-with-media/text-with-media.css
@@ -106,25 +106,17 @@
   .text-with-video-eyebrow, 
   .text-with-image-eyebrow {
     margin-bottom: 8px;
-    padding: 0 8px; 
   }
   
   .text-with-video-description, 
   .text-with-image-description {
     margin-top: 8px;
-    padding: 0 8px; 
   }
   
   .text-with-video-button, 
   .text-with-image-button {
     margin-top: 20px;
   }
-
-  .text-with-video-headline, 
-  .text-with-image-headline {
-  margin: 0;
-  padding: 0 8px;
-}
 
   .text-alignment {
     text-align: left;
